--- a/css/main.scss
+++ b/css/main.scss
@@ -22,7 +22,7 @@ $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
-$content-width:    800px;
+$content-width:    920px;
 
 $on-palm:          600px;
 $on-laptop:        800px;
@@ -42,11 +42,13 @@ $on-laptop:        800px;
     }
 }
 
-
-
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "base",
         "layout",
         "syntax-highlighting"
 ;
+
+@media only screen and (min-width: 481px) {
+  @import "large";
+}
