--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,9 +14,9 @@
       </a>
 
       <div class="trigger">
+        <a class="page-link" href="/posts">Blog</a>
         {% for page in site.pages %}
           {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
           {% endif %}
         {% endfor %}
       </div>
