--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
       </a>
 
       <div class="trigger">
-        <a class="page-link" href="/posts">Blog</a>
+        <a class="page-link" href="/blog/">Blog</a>
         {% for page in site.pages %}
           {% if page.title %}
           {% endif %}
