added magnific-popup for gallery (which requires jquery also)

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -193,3 +193,19 @@ body {
         }
     }
 }
+
+ul.gallery {
+  list-style-type: none;
+}
+
+ul.gallery li {
+  display: inline;
+}
+
+ul.gallery img {
+  width: 144px;
+  height: 144px;
+  margin-right: 4px;
+  margin-bottom: 8px;
+  object-fit: cover;
+}
