--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -157,7 +157,6 @@ body {
 }
 
 .post-title {
-    font-size: 32px;
     letter-spacing: -1px;
     line-height: 1;
 
@@ -170,26 +169,26 @@ body {
     margin-bottom: $spacing-unit;
 
     h2 {
-        font-size: 26px;
+        font-size: 2.6rem;
 
         @include media-query($on-laptop) {
-            font-size: 24px;
+            font-size: 2.4rem;
         }
     }
 
     h3 {
-        font-size: 24px;
+        font-size: 2.4rem;
 
         @include media-query($on-laptop) {
-            font-size: 22px;
+            font-size: 2.2rem;
         }
     }
 
     h4 {
-        font-size: 20px;
+        font-size: 2rem;
 
         @include media-query($on-laptop) {
-            font-size: 18px;
+            font-size: 1.8rem;
         }
     }
 }
