--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,11 +14,12 @@
       </a>
 
       <div class="trigger">
-        <a class="page-link" href="/blog/">Blog</a>
         {% for page in site.pages %}
-          {% if page.title %}
+          {% if page.title == 'WhatsApp Viewer' %}
+            <a class="page-link" href="{{ page.url }}">{{ page.title }}</a>
           {% endif %}
         {% endfor %}
+        <a class="page-link" href="/blog/">Blog</a>
       </div>
     </nav>
 
