--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -241,3 +241,127 @@ h1 {
 .location {
   white-space: nowrap;
 }
+
+.project,
+.experience,
+.education {
+    margin-bottom: 16px;
+}
+
+.project:not(:last-child),
+.experience:not(:last-child) {
+    border-bottom: 1px solid $background-color;
+    padding-bottom: 16px;
+}
+
+.project-name,
+.job-role,
+.education-degree {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.project .image,
+.experience .image,
+.education .image {
+    text-align: center;
+    margin-top: 12px;
+}
+
+.project .image img,
+.experience .image img,
+.education .image img {
+    max-width: 100px;
+    max-height: 50px;
+}
+
+.project .link {
+    margin-bottom: 8px;
+}
+
+.project ul.technologies {
+    list-style-type: none;
+    font-size: 70%;
+    font-family: monospace;
+    color: $grey-color-dark;
+    margin-left: 0;
+}
+
+.project ul.technologies li {
+    display: inline-block;
+    margin: 0;
+}
+
+.project ul.technologies li:not(:last-child):after {
+    content: ", ";
+}
+
+.key-skills {
+    margin: 24px 0;
+}
+
+.key-skills li {
+    list-style-type: none;
+}
+
+.centered {
+    margin: 0 auto;
+    width: $keyskill-width;
+    height: $keyskill-width;
+}
+
+.key-skill {
+    display: inline-block;
+    background-color: $background-color;
+    border: 3px solid $brand-color;
+    height: calc(100% - 6px);
+    width: calc(100% - 6px);
+    line-height: $keyskill-width;
+    border-radius: 50%;
+    text-align: center;
+    vertical-align: middle;
+    font-weight: bold;
+}
+
+.section {
+    margin-top: 60px;
+}
+
+.key-skills-section {
+    margin-top: 0;
+}
+
+.section-title {
+    font-size: 24px;
+    font-weight: 500;
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+
+.section-title i {
+    display: inline-block;
+    margin-right: 8px;
+    border: 1px solid darken($brand-color, 15%);
+    padding: 0.5em 0.6em;
+    color: darken($brand-color, 15%);
+    border-radius: 50%;
+    font-size: 20px;
+}
+
+.other-customers {
+    text-align: center;
+}
+
+.other-customer {
+    display: inline-block;
+    width: 150px;
+    margin-left: 10px;
+    margin-right: 10px;
+    text-align: center;
+}
+
+.other-customer img {
+    max-width: 150px;
+    max-height: 75px;
+    height: auto;
+}
