--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -22,3 +22,11 @@ html, body {
   width: 110px;
   padding-top: 110px;
 }
+
+.other-customer {
+  width: 150px;
+}
+
+.other-customer img {
+  max-width: 150px;
+}
