Contact: No line-break between icon and text

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -247,6 +247,10 @@ h1 {
     font-weight: bold;
 }
 
+.contact-email, .contact-phone {
+    white-space: nowrap;
+}
+
 .project,
 .experience,
 .education {
