Use unpgk.com for skeleton as well to only have a single cdn provider

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
 <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Raleway:400,300,600" type="text/css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
+<link rel="stylesheet" href="https://unpkg.com/skeleton-css@2.0.4/css/skeleton.css">
 <link rel="stylesheet" href="https://unpkg.com/@fortawesome/fontawesome-free@5.8.2/css/all.min.css">
 
 <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
