Improve "other customers" layout spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -394,11 +394,11 @@ h1 {
 }
 
 .other-customer {
-    display: inline-block;
+    display: block;
     width: 100px;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-bottom: 12px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 32px;
     text-align: center;
 }
 
