--- a/_sass/_large.scss
+++ b/_sass/_large.scss
@@ -34,7 +34,11 @@
 }
 
 .other-customer {
+  display: inline-block;
   width: 150px;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 12px;
 }
 
 .other-customer img {
