resume-title-section

--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -30,3 +30,8 @@ html, body {
 .other-customer img {
   max-width: 150px;
 }
+
+.resume-title-section {
+  display: block;
+  page-break-after: always;
+}
