--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -372,6 +372,10 @@ h1 {
     margin-bottom: 0;
 }
 
+.resume-title-section {
+    display: none;
+}
+
 .section-title {
     font-size: 24px;
     font-weight: 500;
