Remove unnecessary section css class

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -364,11 +364,11 @@ h1 {
     list-style-type: none;
 }
 
-.section {
+section {
     margin-bottom: 60px;
 }
 
-.section:last-of-type {
+section:last-of-type {
     margin-bottom: 0;
 }
 
