--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -33,5 +33,15 @@ html, body {
 
 .resume-title-section {
   display: block;
+  margin-bottom: 160px;
+}
+
+.key-skills-section {
+  display: block;
   page-break-after: always;
+}
+
+.key-skills-section h2 {
+  text-align: center;
+  margin-bottom: 40px;
 }
