page break before experiences

--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -37,11 +37,14 @@ html, body {
 }
 
 .key-skills-section {
-  display: block;
   page-break-after: always;
 }
 
 .key-skills-section h2 {
   text-align: center;
   margin-bottom: 40px;
+}
+
+.experiences-section {
+  page-break-before: always;
 }
