--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -204,3 +204,14 @@ ul.gallery img {
   margin-bottom: 8px;
   object-fit: cover;
 }
+
+kbd {
+  padding: 2px 4px;
+  white-space: nowrap;
+  color: #000;
+  background: #eee;
+  border-width: 1px 3px 3px 1px;
+  border-style: solid;
+  border-color: #ccc #aaa #888 #bbb;
+  border-radius: 5px;
+}
