--- a/css/main.scss
+++ b/css/main.scss
@@ -45,7 +45,8 @@ $on-laptop:        800px;
 @import
         "base",
         "layout",
-        "syntax-highlighting"
+        "syntax-highlighting",
+        "cheatsheet"
 ;
 
 @media only screen and (min-width: 481px) {
