--- a/_layouts/cheatsheet.html
+++ b/_layouts/cheatsheet.html
@@ -3,6 +3,8 @@ layout: default
 ---
 <div class="home cheatsheet">
 
+  <a href="{{ site.baseurl }}{% link cheatsheets.html %}" class="cheatsheet-link">&lt;- Cheat sheets</a>
+
   <h1>{{ page.title }}</h1>
 
   {% for section in page.section %}
