Cheat sheets: Show tags

--- a/_sass/_cheatsheet.scss
+++ b/_sass/_cheatsheet.scss
@@ -25,6 +25,11 @@
   width: 100%;
 }
 
+.cheatsheet-tag {
+  color: gray;
+  font-size: 80%;
+}
+
 .cheatsheet-link {
   display: inline-block;
   margin-bottom: 2em;
