Cheat sheets: List styling

--- a/_sass/_cheatsheet.scss
+++ b/_sass/_cheatsheet.scss
@@ -40,17 +40,21 @@
   padding: 0;
   margin: 0;
 
-  li a {
-    border: 1px solid #ddd;
-    margin-top: -1px;
-    background-color: #f6f6f6;
-    padding: 12px;
-    text-decoration: none;
-    color: black;
-    display: block;
+  li {
+    margin: 0;
 
-    &:hover {
-      background-color: #eee;
+    a {
+      border: 1px solid #ddd;
+      margin-top: -1px;
+      background-color: #f6f6f6;
+      padding: 12px;
+      text-decoration: none;
+      color: black;
+      display: block;
+
+      &:hover {
+        background-color: #eee;
+      }
     }
   }
 }
