--- a/_layouts/cheatsheet.html
+++ b/_layouts/cheatsheet.html
@@ -5,7 +5,7 @@ layout: default
 
   <a href="{{ site.baseurl }}{% link cheatsheets.html %}" class="cheatsheet-link">&lt;- Cheat sheets</a>
 
-  <h1>{{ page.title }}</h1>
+  <h1>{{ page.title | downcase }}</h1>
 
   {% for section in page.section %}
   <div class="section">
