--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
-<link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/images/favicon.png">
+<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicon.png">
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
