--- a/css/main.scss
+++ b/css/main.scss
@@ -45,8 +45,7 @@ $on-laptop:        800px;
 @import
         "base",
         "layout",
-        "syntax-highlighting",
-        "cheatsheet"
+        "syntax-highlighting"
 ;
 
 @media only screen and (min-width: 481px) {
