--- a/_sass/_large.scss
+++ b/_sass/_large.scss
@@ -27,6 +27,12 @@
   padding-top: 110px;
 }
 
+.project .image,
+.experience .image,
+.education .image {
+    text-align: center;
+}
+
 .other-customer {
   display: inline-block;
   width: 150px;
