Make descriptions bold for better printability

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -423,6 +423,7 @@ section:last-of-type {
     background: #333;
     text-align: right;
     color: #fff;
+    font-weight: 900;
 }
 
 .resume-title .summary dd {
