--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -9,9 +9,14 @@
 .site-header {
     border-bottom: 1px solid rgb(255, 135, 0);
     min-height: 56px;
-
-    // Positioning context for the mobile navigation icon
     position: relative;
+}
+
+.site-header > .wrapper {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 8px;
+    padding-right: 8px;
 }
 
 .site-title {
@@ -19,8 +24,6 @@
     line-height: 56px;
     letter-spacing: -1px;
     margin-bottom: 0;
-    padding-left: 8px;
-    float: left;
 
     &,
     &:visited {
@@ -29,7 +32,6 @@
 }
 
 .site-nav {
-    float: right;
     line-height: 56px;
 
     .menu-icon {
@@ -39,49 +41,39 @@
     .page-link {
         color: $text-color;
         line-height: $base-line-height;
-
-        // Gaps between nav items, but not on the first one
-        &:not(:first-child) {
-            margin-left: 20px;
-        }
+        margin-left: 20px;
     }
 
     @include media-query($on-palm) {
-        position: absolute;
-        top: 9px;
-        right: 30px;
         background-color: $background-color;
-        border: 1px solid $grey-color-light;
-        border-radius: 5px;
-        text-align: right;
         z-index: 1000;
+        align-self: center;
 
         .menu-icon {
-            display: block;
-            float: right;
-            width: 36px;
-            height: 26px;
-            line-height: 0;
-            padding-top: 10px;
-            text-align: center;
+            display: initial;
 
             > svg {
-                width: 18px;
-                height: 15px;
+                width: 32px;
+                height: 32px;
+                display: block;
 
                 path {
-                    fill: $grey-color-dark;
+                    stroke: $grey-color-dark;
                 }
             }
         }
 
         .trigger {
-            clear: both;
             display: none;
         }
 
         &:hover .trigger {
             display: block;
+            background-color: $background-color;
+            position: absolute;
+            left: 0px;
+            top: calc(100% + 1px);
+            width: 100%;
             padding-bottom: 5px;
         }
 
