--- a/index.njk
+++ b/index.njk
@@ -2,17 +2,7 @@
 layout: page
 ---
 
-<h1>Eleventy Sample</h1>
-
-<p>
-    <span>I've played around with <a href="https://www.11ty.dev/" target="_blank">Eleventy</a>, a static site generator.</span><br/>
-    <span>I started simple and added more and more features I find reasonable for my website. You will find one feature per post below.</span>
-</p>
-
-<p class="github-link">
-    <span>This project is on GitHub:</span>
-    <a href="https://github.com/andreas-mausch/eleventy-sample" target="_blank"><img src="{{ "/images/github.svg" | url }}" alt="GitHub Icon"/></a>
-</p>
+<h1>andreas-mausch.de</h1>
 
 <h2>A list of all posts</h2>
 
