--- a/index.njk
+++ b/index.njk
@@ -4,20 +4,4 @@ layout: page
 
 <h1>andreas-mausch.de</h1>
 
-<h2>A list of all posts</h2>
-
-<ol reversed class="postlist">
-    {% for post in collections.posts %}
-    <li class="postlist-item">
-        <div class="postlist-item-thumbnail">
-            {% postThumbnail post %}
-        </div>
-        <div class="postlist-item-content">
-            <div>
-                <a href="{{ post.url | url }}" class="postlist-link">{% if post.data.title %}{{ post.data.title }}{% else %}<code>{{ post.url }}</code>{% endif %}</a>
-            </div>
-            <time class="postlist-date" datetime="{{ post.date | isoDateTime }}">{{ post.date | isoDate }}</time>
-        </div>
-    </li>
-    {% endfor %}
-</ol>
+Index
