--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -8,13 +8,39 @@ title: andreas-mausch.de
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }}</title>
-    <link rel="stylesheet" href="{{ "/styles/style.css" | url }}" />
-{% if extraStyles and "katex" in extraStyles %}
-    <link rel="stylesheet" href="{{ "/styles/katex.css" | url }}" />
-{% endif %}
-    <link rel="icon" type="image/svg+xml" href="{{ "/favicon.svg" | url }}" sizes="any" />
+    <link rel="stylesheet" href="{{ "/styles/style.css" | url }}"/>
+    {% if extraStyles and "katex" in extraStyles %}
+      <link rel="stylesheet" href="{{ "/styles/katex.css" | url }}"/>
+    {% endif %}
+    <link rel="icon" type="image/svg+xml" href="{{ "/favicon.svg" | url }}" sizes="any"/>
   </head>
   <body>
+    <header class="site-header">
+      <div class="site-header-content">
+        <a class="site-title" href="{{ "/" | url }}">Andreas Mausch</a>
+        <nav class="site-nav">
+          <a href="#" class="menu-icon">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              version="1.1"
+              viewbox="0 0 16 16"
+              width="100%"
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="1.5">
+              <path d="m2.75 12.25h10.5m-10.5-4h10.5m-10.5-4h10.5"/>
+            </svg>
+          </a>
+          <div class="site-nav-items">
+            {%- for post in collections.navigationPages -%}
+              <a class="page-link" href="{{ post.url }}">{{ post.data.title }}</a>
+            {%- endfor -%}
+          </div>
+        </nav>
+      </div>
+    </header>
     <div class="content">
       {{ content | safe }}
     </div>
