--- a/styles/_large.scss
+++ b/styles/_large.scss
@@ -1,12 +1,11 @@
 body {
-  background-color: #ddd;
+  background-color: #ececec;
 }
 
 .content {
-  border: 2px solid $highlight-color;
-  border-radius: 15px;
+  border-radius: 16px;
   margin: 30px auto;
-  max-width: 1200px;
+  max-width: 1060px;
   padding: 40px;
 }
 
