--- a/styles/style.scss
+++ b/styles/style.scss
@@ -22,7 +22,7 @@ body {
 
 .content {
   background-color: $content-background-color;
-  padding: 5px;
+  padding: 16px 8px;
 }
 
 img {
@@ -48,29 +48,36 @@ a {
 }
 
 .postlist {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin: 0;
   padding-left: 0;
 }
 
 .postlist-item {
-  border-bottom: 2px solid #aaa;
   display: flex;
   flex-direction: column;
+  gap: 6px;
   list-style-type: none;
-  padding: 12px;
+}
 
-  &:last-child {
-    border-bottom: 0;
-  }
+.postlist-item-content {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  gap: 6px;
+}
+
+.postlist-date {
+  color: #777;
+  font-size: 87.5%;
 }
 
 .postlist-item-thumbnail {
   margin-right: 30px;
   max-height: 120px;
   width: 120px;
-}
-
-.postlist-item-content {
-  flex-grow: 1;
 }
 
 .postlist-link {
