--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -33,11 +33,16 @@ title: andreas-mausch.de
               <path d="m2.75 12.25h10.5m-10.5-4h10.5m-10.5-4h10.5"/>
             </svg>
           </a>
-          <div class="site-nav-items">
+          <input id="nav-toggle" type="checkbox"/>
+          <label class="nav-button-container" for="nav-toggle">
+            <div class="nav-button"></div>
+          </label>
+          <ol class="site-nav-items">
+            <li class="page-link-home"><a class="page-link" href="{{ "/" | url }}">Home</a></li>
             {%- for post in collections.navigationPages -%}
-              <a class="page-link" href="{{ post.url }}">{{ post.data.title }}</a>
+              <li><a class="page-link" href="{{ post.url }}">{{ post.data.title }}</a></li>
             {%- endfor -%}
-          </div>
+          </ol>
         </nav>
       </div>
     </header>
