Improve burger menu styling

--- a/styles/_large.scss
+++ b/styles/_large.scss
@@ -19,7 +19,9 @@
 
 .site-nav-items {
   flex-direction: row;
+  gap: 30px;
   max-height: unset;
+  padding: 0;
   position: initial;
   transition: none;
 }
