Set width and height on video

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -73,14 +73,9 @@ li {
   padding: 16px 8px;
 }
 
-img {
-  height: auto;
-  max-width: 100%;
-  object-fit: contain;
-  width: auto;
-}
-
+img,
 video {
+  height: auto;
   max-width: 100%;
 }
 
