Smaller header on mobile

--- a/styles/_large.scss
+++ b/styles/_large.scss
@@ -17,6 +17,14 @@
   display: none;
 }
 
+.site-header {
+  padding: 10px;
+}
+
+.site-title {
+  font-size: 20pt;
+}
+
 .site-nav-items {
   flex-direction: row;
   gap: 30px;
