Set width and height on imgs

--- a/index.njk
+++ b/index.njk
@@ -4,7 +4,7 @@ layout: page
 
 <div class="me">
   <div class="image">
-    <img src="{{ "/images/me.jpg" | url }}" alt="Profile picture">
+    <img src="{{ "/images/me.jpg" | url }}" alt="Profile picture" width="640" height="640">
   </div>
   <p>
     Hello, my name is Andreas Mausch, I am a software developer from
@@ -44,7 +44,7 @@ layout: page
   <h1>How I work.</h1>
   <div class="how-i-work-values">
     <div>
-      <img src="{{ "/images/automation.svg" | url }}" alt="Automation">
+      <img src="{{ "/images/automation.svg" | url }}" alt="Automation" width="100" height="100">
       <h2>Automation</h2>
       <p>
         I love to put a lot of time in automating recurring manual tasks to save even more time mid- to long-term. Let the
@@ -54,7 +54,7 @@ layout: page
       </p>
     </div>
     <div>
-      <img src="{{ "/images/testing.svg" | url }}" alt="Testing">
+      <img src="{{ "/images/testing.svg" | url }}" alt="Testing" width="100" height="100">
       <h2>Testing</h2>
       <p>
         Whether I work on a native mobile app, a web app, an API or a desktop application: It must be tested automatically, and
@@ -64,7 +64,7 @@ layout: page
       </p>
     </div>
     <div>
-      <img src="{{ "/images/digdeep.svg" | url }}" alt="Dig deep">
+      <img src="{{ "/images/digdeep.svg" | url }}" alt="Dig deep" width="100" height="100">
       <h2>Dig deep</h2>
       <p>
         Having a good understanding how things work under the hood often helps me. I am familiar with Assembly, different
@@ -74,7 +74,7 @@ layout: page
       </p>
     </div>
     <div>
-      <img src="{{ "/images/open.svg" | url }}" alt="Open">
+      <img src="{{ "/images/open.svg" | url }}" alt="Open" width="100" height="100">
       <h2>Open</h2>
       <p>
         I try to find the best fitting technology for a given problem. While my professional background is mostly Java, I have
