Build own icon font to reduce size

--- a/index.njk
+++ b/index.njk
@@ -7,33 +7,33 @@ layout: page
   <p>
     Hello, my name is Andreas Mausch, I am a software developer from
     <span class="location">
-      <i class="fas fa-map-marker-alt"></i>
+      <i class="icon icon-location-dot"></i>
       <a href="https://www.google.com/maps/place/Hamburg" target="_blank">Hamburg, Germany</a>.
     </span>
   </p>
   <p>
     You can contact me on
     <span class="contact-email">
-      <i class="fas fa-envelope-open-text"></i>
+      <i class="icon icon-envelope-open-text"></i>
       <a href="mailto:andreas.mausch@gmail.com">andreas.mausch@gmail.com</a>
     </span>
     or
     <span class="contact-phone">
-      <i class="fas fa-phone"></i>
+      <i class="icon icon-phone"></i>
       <a href="tel:+4915757575577">+49 157 5757 5577</a>
     </span>.
   </p>
   <div class="social-links">
     <span>
-      <i class="fab fa-github"></i>
+      <i class="icon icon-github"></i>
       <a href="https://github.com/andreas-mausch" target="_blank">GitHub</a>
     </span>
     <span>
-      <i class="fab fa-linkedin"></i>
+      <i class="icon icon-linkedin"></i>
       <a href="https://www.linkedin.com/in/andreas-mausch-78483058" target="_blank">LinkedIn</a>
     </span>
     <span>
-      <i class="fab fa-xing"></i>
+      <i class="icon icon-xing"></i>
       <a href="https://www.xing.com/profile/Andreas_Mausch2" target="_blank">Xing</a>
     </span>
   </div>
