--- a/styles/style.scss
+++ b/styles/style.scss
@@ -60,7 +60,7 @@ ul {
 }
 
 li {
-  margin-bottom: calc($spacing-unit / 4);
+  line-height: 2;
 }
 
 .content {
@@ -186,11 +186,13 @@ a {
 .toc {
   border: 1px solid #a2a9b1;
   font-size: 11pt;
+  margin-bottom: calc($spacing-unit / 2);
   padding: 7px;
 }
 
 .toc ol {
   list-style-type: none;
+  margin: 0 0 0 calc($spacing-unit / 4);
 }
 
 .external-link::after {
