Use background image on index.njk in preparation for hover effect

--- a/index.njk
+++ b/index.njk
@@ -3,7 +3,7 @@ layout: page
 ---
 
 <div class="me">
-  <img src="{{ "/images/me.jpg" | url }}" alt="Profile picture" width="200" height="200">
+  <div class="me-image"></div>
   <p>
     Hello, my name is Andreas Mausch, I am a software developer from
     <span class="location">
